# mesh_loader

./: CMakeLists.txt  README.md
shaders/: materials.vs
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  mesh_loader_app.cpp
src/mesh_loader/: CMakeLists.txt  camera.h  filesystem.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
